--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -1,61 +1,61 @@
-name: CI-CD  # Название workflow (отображается в GitHub Actions)
+name: CI-CD  # Название workflow, отображается в GitHub Actions UI
 
 on:
   push:
-    branches: [main]  # Запускается только при push в ветку main
-
-# Глобальные переменные окружения, применяются во всех jobs
-env:
-  APP_IMAGE_NAME: myapp              # Название образа
-  DB_HOST: localhost
-  DB_PORT: 5432
-  DB_NAME: kubsu
-  DB_USER: kubsu
-  DB_PASS: kubsu
+    branches: [main]  # Запускается при пуше в ветку main
 
 jobs:
-  # 🛠 Сборка Docker-образа (builder-stage)
+  # 🧱 Сборка образа с тегом по SHA
   build:
-    runs-on: self-hosted             # Запуск job на локальном runner
-    outputs:                         # Выходные данные — передаются в другие jobs
+    runs-on: self-hosted  # Запуск на своём runner
+
+    outputs:  # Передаём тег для следующих job
       image-tag: ${{ steps.set-tag.outputs.tag }}
 
     steps:
       - name: Клонирование репозитория
         uses: actions/checkout@v3
 
-      - name: Установка тега из SHA коммита
+      - name: Установка тега по SHA коммита
         id: set-tag
-        run: echo "tag=${{ env.APP_IMAGE_NAME }}:${{ github.sha }}" >> $GITHUB_OUTPUT
+        run: echo "tag=myapp:${{ github.sha }}" >> $GITHUB_OUTPUT
 
-      - name: Сборка builder-образа для тестов
+      - name: Сборка builder-образа (для тестов)
         run: docker build --target builder -t ${{ steps.set-tag.outputs.tag }} .
 
-  # ✅ Тестирование приложения в builder-контейнере
+  # ✅ Тестирование
   test:
     runs-on: self-hosted
-    needs: build                    # Запускается только после завершения build
+    needs: build  # Запускается после успешного build
 
-    services:                       # Вспомогательные сервисы, например PostgreSQL
+    # Временный PostgreSQL для тестов
+    services:
       postgres:
         image: postgres:14
         env:
-          POSTGRES_DB: ${{ env.DB_NAME }}
-          POSTGRES_USER: ${{ env.DB_USER }}
-          POSTGRES_PASSWORD: ${{ env.DB_PASS }}
+          POSTGRES_DB: kubsu
+          POSTGRES_USER: kubsu
+          POSTGRES_PASSWORD: kubsu
         ports:
-          - ${{ env.DB_PORT }}:${{ env.DB_PORT }}
+          - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U ${{ env.DB_USER }}"
+          --health-cmd "pg_isready -U kubsu"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+
+    env:  # Локальные переменные окружения для тестов
+      DB_HOST: localhost
+      DB_PORT: 5432
+      DB_NAME: kubsu
+      DB_USER: kubsu
+      DB_PASS: kubsu
 
     steps:
       - name: Клонирование кода
         uses: actions/checkout@v3
 
-      - name: Ожидание готовности PostgreSQL
+      - name: Ожидание PostgreSQL
         run: |
           until pg_isready -h ${{ env.DB_HOST }} -p ${{ env.DB_PORT }} -U ${{ env.DB_USER }}; do
             echo "⏳ Waiting for Postgres..."
@@ -75,10 +75,13 @@ jobs:
             ${{ needs.build.outputs.image-tag }} \
             pytest tests
 
-  # 🚀 Деплой приложения на удалённый сервер
+  # 🚀 Деплой
   deploy:
     runs-on: self-hosted
-    needs: [build, test]           # Запускается только если build и test успешны
+    needs: [build, test]  # Запускается только после успешных build и test
+
+    env:
+      IMAGE_NAME: myapp
 
     steps:
       - name: Клонирование кода
@@ -89,25 +92,25 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Сборка финального production-образа
-        run: docker build -t ${{ env.APP_IMAGE_NAME }}:final .
+      - name: Сборка финального образа
+        run: docker build -t ${{ env.IMAGE_NAME }}:final .
 
-      - name: Деплой на сервер
+      - name: Деплой на сервер через SSH
         run: |
-          echo "🚀 Загружаем образ на сервер и перезапускаем контейнер..."
+          echo "🚀 Деплой на удалённый сервер..."
 
-          # Отправляем Docker-образ по SSH на сервер
-          docker save ${{ env.APP_IMAGE_NAME }}:final | ssh -o StrictHostKeyChecking=no \
+          # Загружаем образ на удалённую машину
+          docker save ${{ env.IMAGE_NAME }}:final | ssh -o StrictHostKeyChecking=no \
             -p ${{ secrets.PORT }} \
             ${{ secrets.USER }}@${{ secrets.HOST }} \
-            "podman load && podman tag ${{ env.APP_IMAGE_NAME }}:final ${{ env.APP_IMAGE_NAME }}:final"
+            "podman load && podman tag ${{ env.IMAGE_NAME }}:final ${{ env.IMAGE_NAME }}:final"
 
-          # Перезапускаем контейнер на удалённой машине
+          # Перезапускаем контейнер
           ssh -o StrictHostKeyChecking=no \
             -p ${{ secrets.PORT }} \
             ${{ secrets.USER }}@${{ secrets.HOST }} \
-            "podman stop ${{ env.APP_IMAGE_NAME }} || true && \
-             podman rm ${{ env.APP_IMAGE_NAME }} || true && \
-             podman run -d --name ${{ env.APP_IMAGE_NAME }} \
+            "podman stop ${{ env.IMAGE_NAME }} || true && \
+             podman rm ${{ env.IMAGE_NAME }} || true && \
+             podman run -d --name ${{ env.IMAGE_NAME }} \
              --network=host \
-             ${{ env.APP_IMAGE_NAME }}:final"
+             ${{ env.IMAGE_NAME }}:final"
